--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,5 +1,18 @@
 // HEADER
 .header {
+    
+    .title {
+        &__site,
+        &__link {
+            color: $color-font-primary;
+            text-decoration: none;
+    
+            &:hover {
+                color: $color-font-primary;
+            }
+        }
+    }
+
     @include xs {
         display: flex;
         flex-direction: column;
@@ -8,72 +21,61 @@
         background-image: linear-gradient(to left, $color-bg-primary, $color-bg-secondary);
         padding: 0.625rem;
 
-        &__logo-site {
-            width: 15rem;
-            height: 15rem;
+        .logo {
+            &__site {
+                width: 15rem;
+                height: 15rem;
+            }
         }
 
-        &__logo-site-nav {
-            display: none;
-        }
-
-        &__title-site {
-            display: none;
+        .title {
+            &__site {
+                display: none;
+                font-family: $font-primary;
+            }
         }
     }
-
+    
     @include sm {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-template-areas: "logo title title .";
         justify-content: center;
         align-content: center;
-
-        &__logo {
+        
+        .logo {
             grid-area: logo;
             display: flex;
             justify-content: start;
             align-items: center;
-
+            
+            &__site {
+                width: 10rem;
+                height: 10rem;
+            }
         }
-
-        &__title {
+        
+        .title {
             grid-area: title;
             text-align: center;
-        }
 
-        &__subtitle-site {
-            display: block;
-        }
-
-        &__logo-site {
-            width: 10rem;
-            height: 10rem;
-        }
-
-        &__title-site {
-            display: inline;
-            font-size: 2.5rem;
+            &__site {
+                display: inline;
+                font-size: 2.5rem;
+            }
+            
+            &__subtitle-site {
+                display: block;
+            }
         }
     }
-
+    
     @include md {
-        &__title-site {
-            font-size: 3.5rem;
+        .title {
+            &__site {
+                font-size: 3.5rem;
+            }
         }
     }
-
-    a {
-        color: $color-font-primary;
-        text-decoration: none;
-
-        &:hover {
-            color: $color-font-primary;
-        }
-    }
-
-    &__title-site {
-        font-family: $font-primary;
-    }
-
+    
 }
