--- a/scss/layout/_forms.scss
+++ b/scss/layout/_forms.scss
@@ -1,77 +1,110 @@
 // FORMS
-.centerItemsGrid {
-    justify-self: center;
-    align-self: center;
-}
 
-.subtitleForm {
-    grid-area: subtitleForm;
-    color: $color-font-secondary;
-    padding: 1rem;
-    box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
-    background-color: $color-violet;
-    border-radius: 0.5rem;
-    @include md {
-        text-align: start;
-        margin-left: 2rem;
+
+.form {
+
+
+    &__button-submit {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
     }
-}
 
-.formGroup {
-    grid-area: form;
-    display: flex;
-    flex-direction: column;
-    background-image: linear-gradient(to bottom, $color-bg-primary, $color-bg-secondary);
-    box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
-    border-radius: 1rem;
-    width: MIN(40rem, 100%);
-    height: 100%;
-    padding: 1rem;
+    &__camp {}
 
-    h3 {
+    &__text-area {
+        width: 100%;
+        padding: 0.4rem;
+        border-radius: 0.5rem;
+        font-family: $font-secondary;
+        font-size: 1rem;
+        font-weight: bold;
+
+        &:focus {
+            background-color: $color-bg-secondary;
+            color: $color-font-primary;
+        }
+    }
+
+    &__container {
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-areas:
+            "subtitleForm"
+            "form";
+        gap: 2rem;
+        padding: 2rem;
+        color: $color-font-primary;
+        font-family: $font-secondary;
+        font-size: 1.2rem;
+        border-radius: 0.5rem;
+        @include subtitle();
+    }
+
+    &__content-subtitle {
+            display: block;
+            text-align: center;
+            margin-bottom: 0;
+            font-family: $font-primary;
+
+            @include md {
+                text-align: start;
+                margin-left: 2rem;
+            }
+    }
+
+
+    &__form-group {
+        grid-area: form;
+        display: flex;
+        flex-direction: column;
+        background-image: linear-gradient(to bottom, $color-bg-primary, $color-bg-secondary);
+        box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
+        border-radius: 1rem;
+        width: MIN(40rem, 100%);
+        height: 100%;
+        padding: 1rem;
+
+        &--center-items-grid {
+            justify-self: center;
+            align-self: center;
+        }
+    }
+
+    &__label {
+        display: block;
+        font-size: 1.2rem;
+    }
+
+    &__link {
+        color: $color-green;
+        text-decoration: none;
+    }
+
+    &__subtitle {
+        grid-area: subtitleForm;
+        color: $color-font-secondary;
+        padding: 1rem;
+        box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
+        background-color: $color-violet;
+        border-radius: 0.5rem;
+
+        @include md {
+            text-align: start;
+            margin-left: 2rem;
+        }
+    }
+
+    &__text {
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+
+    &__title {
         font-size: 1.5rem;
         border-radius: 0.5rem;
         padding: 0.5rem;
         color: $color-font-secondary;
         background-color: $color-green;
         box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
-    }
-
-    .form {
-        margin-top: 1rem;
-
-        button {
-            margin-top: 1rem;
-            margin-bottom: 1rem;
-        }
-
-        p {
-            margin-top: 0.5rem;
-            margin-bottom: 0.5rem;
-
-            a {
-                color: $color-green;
-                text-decoration: none;
-            }
-        }
-
-        .camp label {
-            display: block;
-            font-size: 1.2rem;
-        }
-
-        textarea {
-            width: 100%;
-            padding: 0.4rem;
-            border-radius: 0.5rem;
-            font-family: $font-secondary;
-            font-size: 1rem;
-            font-weight: bold;
-
-            &:focus {
-                background-color: $color-bg-secondary;
-                color: $color-font-primary;
-            }
-        }
     }
 }
