--- a/scss/layout/_forms.scss
+++ b/scss/layout/_forms.scss
@@ -7,13 +7,16 @@
         margin-bottom: 1rem;
     }
 
+    &__control {
+        font-weight: bold;
+    }
+
     &__text-area {
         width: 100%;
         padding: 0.4rem;
         border-radius: 0.5rem;
         font-family: $font-secondary;
         font-size: 1rem;
-        font-weight: bold;
 
         &:focus {
             background-color: $color-bg-secondary;
